[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fissix"
dynamic = ["description", "version"]
readme = "README.md"
authors = [
    {name = "Amethyst Reese", email="amethyst@n7.gg"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Python Software Foundation License",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"
dependencies = [
    "appdirs >= 1.4.4",
]

[project.optional-dependencies]
dev = [
    "attribution==1.8.0",
    "black==24.8.0",
    "flit==3.9.0",
    "pytest==8.3.3",
    "ufmt==2.7.3",
    "usort==1.0.8",
]
docs = [
    "sphinx==8.0.2",
    "sphinx-mdinclude==0.6.2",
]

[project.urls]
Github = "https://github.com/amyreese/fissix"

[tool.flit.sdist]
include = [
    "fissix/*.txt",
]
exclude = [
    ".github/",
    "cpython/",
    "scripts/",
    "tests/",
]

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict=true
addopts = "--strict-markers --strict-config"
filterwarnings = ["error"]

[tool.attribution]
name = "fissix"
package = "fissix"
signed_tags = true
version_file = true
ignored_authors = ["dependabot", "pyup.io"]

[tool.ufmt]
excludes = [
    "^/cpython",
    "fissix/tests/data/",
]
sorter = "skip"
